<?xml version="1.0"?>
<package format="2">
  <name>sick_tim</name>
  <version>0.0.14</version>
  <description>
    A ROS driver for the SICK TiM and the SICK MRS 1000 laser scanners.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sick_tim</url>
  <url type="repository">https://github.com/uos/sick_tim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>roslaunch</build_depend>

  <build_export_depend>libusb-1.0-dev</build_export_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
