<?xml version="1.0"?>
<package format="3">
  <name>sick_tim</name>
  <version>0.0.18</version>
  <description>
    A ROS2 driver for the SICK TiM and the SICK MRS 1000 laser scanners.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sick_tim</url>
  <url type="repository">https://github.com/uos/sick_tim</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>

  <build_export_depend>libusb-1.0-dev</build_export_depend>

  <depend>diagnostic_updater</depend>
  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>stratom_lint_common</test_depend>

  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
